--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,3 +1,3 @@
 <meta charset="utf-8" />
-<title>HOME| The Paragraph</title>
+<title>The Paragraph</title>
 <link rel="stylesheet" href="/css/styles.css" />
