--- a/views/pages/edit.ejs
+++ b/views/pages/edit.ejs
@@ -7,22 +7,26 @@
     <div class="container">
       <%- include('../partials/header'); %>
       <form action="/edit/<%=article._id%>" method="post">
-        <h1 class="h1-editpg">Edit Post</h1>
-        <label for="title">Title</label>
-        <input
-          type="text"
-          id="title"
-          name="title"
-          placeholder="Edit Title"
-        /><br />
-        <label for="createPost"></label>
-        <textarea
-          placeholder="Rewrite Post"
-          id="content"
-          name="content"
-          style="height: 200px; width: 80%"
-        ></textarea
-        ><br />
+        <h1 class="form">Edit Post</h1>
+        <div class="form-input">
+          <div class="label"><label for="title">Title</label></div>
+          <input
+            type="text"
+            id="title"
+            name="title"
+            placeholder="Edit Title"
+          /><br />
+        </div>
+        <div class="form-input">
+          <div class="label"><label for="createPost"></label></div>
+          <textarea
+            placeholder="Rewrite Post"
+            id="content"
+            name="content"
+            style="height: 200px; width: 80%"
+          ></textarea>
+        </div>
+        <br />
         <button type="submit">Update</button>
       </form>
 
