--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+
 }
 
 body {
@@ -70,6 +71,16 @@ main p {
   font-size: 1.1rem;
   line-height: 1.6rem;
   padding: 0 20px 0 20px;
+}
+
+main h1 {
+  padding-bottom: 0;
+}
+
+main .ed-del {
+  color: #091057;
+  padding: 0 0 10px 20px;
+  margin: 0;
 }
 
 aside {
@@ -169,6 +180,11 @@ button {
   color: #fff;
   display: flex;
   align-items: start;
+}
+
+/* Post page */
+.post-page {
+  min-height: 100vh;
 }
 
 @media screen and (max-width: 480px) {
